--- a/app/templates/app/quiz/list.html
+++ b/app/templates/app/quiz/list.html
@@ -33,7 +33,7 @@
                         <div class="card-header text-center">
                             <div class="bg-info position-absolute align-self-center d-flex justify-content-center align-items-center text-white text-center"
                                  style="border-radius: 100%; width: 40px; height: 40px; margin-top: -10px; margin-left: -15px">{{ forloop.counter }}</div>
-                            {{ quiz.name }}
+                            <span class="d-block" style="margin-top: 30px !important;">{{ quiz.name }}</span>
                         </div>
                         <div class="card-body">
                             Вопросов: {{ quiz.questions.count }}<br>
@@ -41,11 +41,11 @@
                         </div>
                         <div class="card-footer d-flex justify-content-center">
                             <a href="{% url 'app:management_quiz_detail' quiz.id %}"
-                               class="btn btn-info bg-info d-flex justify-content-center align-self-center w-50">
-                                <i class="fa fa-eye"></i>
+                               class="btn btn-info bg-info text-center w-50">
+                                <i class="fa fa-eye mr-0"></i>
                             </a>
-                            <a href="#" class="btn btn-warning d-flex justify-content-center align-self-center w-50">
-                                <i class="fa fa-edit"></i>
+                            <a href="#" class="btn btn-warning text-center w-50">
+                                <i class="fa fa-edit mr-0"></i>
                             </a>
                         </div>
                     </div>
