--- a/app/templates/app/user/cabinet.html
+++ b/app/templates/app/user/cabinet.html
@@ -26,15 +26,15 @@
           style="max-width: 1280px; width: 90%;">
         {% csrf_token %}
         <div class="row justify-content-between">
-            <div class="mb-1 col-4 p-2" style="box-sizing: border-box">
+            <div class="mb-1 col-sm-4 col-12 p-2" style="box-sizing: border-box">
                 <label for="">Фамилия</label>
                 <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}">
             </div>
-            <div class="mb-1 col-4 p-2" style="box-sizing: border-box">
+            <div class="mb-1 col-sm-4 col-12 p-2" style="box-sizing: border-box">
                 <label for="">Имя</label>
                 <input type="text" class="form-control" name="first_name" value="{{ user.first_name }}">
             </div>
-            <div class="mb-1 col-4 p-2" style="box-sizing: border-box">
+            <div class="mb-1 col-sm-4 col-12 p-2" style="box-sizing: border-box">
                 <label for="">Отчество</label>
                 <input type="text" class="form-control" name="patronymic"
                        value="{{ user.profile.patronymic|default:'' }}">
@@ -53,7 +53,7 @@
                     <i class="fa fa-copy m-auto"></i>
                 </button>
             </div>
-            <div class="col-3 align-self-center p-2 m-auto d-block" style="box-sizing: border-box">
+            <div class="col-12 align-self-center p-2 m-auto d-flex justify-content-center" style="box-sizing: border-box">
                 <button type="submit" class="btn btn-success">
                     <i class="fa fa-edit"></i>
                     Изменить
