--- a/app/templates/app/user_quiz/list.html
+++ b/app/templates/app/user_quiz/list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block name %}
-    Тесты
+    Результаты тестов
 {% endblock %}
 
 {% block breadcrumb %}
@@ -16,7 +16,7 @@
             </a>
         </li>
         <li class="breadcrumb-item">
-            <a href="#">Тесты</a>
+            <a href="#">Результаты тестов</a>
         </li>
     </ul>
 {% endblock %}
@@ -47,15 +47,25 @@
                     <td>{{ user_quiz.quiz.name }}</td>
                     <td>{{ user_quiz.created_at|date:'d.m.Y H:i' }}</td>
                     <td>{{ user_quiz.user_answers.count }} / {{ user_quiz.quiz.questions.count }}</td>
-{#                    {% with user_quiz.get_life_expectancy_and_accuracy as life_expectancy_and_accuracy %}#}
-{#                        <td>{{ life_expectancy_and_accuracy.duration }}</td>#}
-{#                        <td>{{ life_expectancy_and_accuracy.accuracy }}</td>#}
-{#                    {% endwith %}#}
+                    {#                    {% with user_quiz.get_life_expectancy_and_accuracy as life_expectancy_and_accuracy %}#}
+                    {#                        <td>{{ life_expectancy_and_accuracy.duration }}</td>#}
+                    {#                        <td>{{ life_expectancy_and_accuracy.accuracy }}</td>#}
+                    {#                    {% endwith %}#}
                     <td>{{ user_quiz.duration }}</td>
                     <td>{{ user_quiz.accuracy }}%</td>
                     <td>
                         <a href="{% url 'app:user_quiz_recommendation' user_quiz.id %}" class="m-2">
-                            <i class="fa fa-chart-pie text-info"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 class="icon icon-tabler icon-tabler-report-analytics" width="16" height="16"
+                                 viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none"
+                                 stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2"/>
+                                <path d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"/>
+                                <path d="M9 17v-5"/>
+                                <path d="M12 17v-1"/>
+                                <path d="M15 17v-3"/>
+                            </svg>
                         </a>
                         <a href="{% url 'app:quiz_detail' user_quiz.id %}" class="m-2">
                             <i class="fa fa-eye text-success"></i>
