--- a/app/templates/app/user_quiz/recommendation/detail.html
+++ b/app/templates/app/user_quiz/recommendation/detail.html
@@ -5,7 +5,21 @@
 {% endblock %}
 
 {% block name %}
-    Рекомендация
+    <div class="d-flex justify-content-between">
+        <div>
+            Рекомендация
+        </div>
+        <div class="d-flex justify-content-between">
+            <a href="{% url 'app:user_quiz_recommendation_send' user_quiz.id %}" class="btn btn-info mr-2">
+                <i class="fa fa-envelope"></i>
+                Отправить на почту
+            </a>
+            <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" class="btn btn-success">
+                <i class="fa fa-download"></i>
+                Скачать PDF
+            </a>
+        </div>
+    </div>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -16,7 +30,7 @@
             </a>
         </li>
         <li class="breadcrumb-item">
-            <a href="{% url 'app:quiz_list' %}">Тесты</a>
+            <a href="{% url 'app:quiz_list' %}">Результаты тестов</a>
         </li>
         <li class="breadcrumb-item">
             <a href="{% url 'app:quiz_list' %}">
@@ -41,6 +55,12 @@
           style="border-radius: 15px; width: fit-content; font-size: 27px; padding: 10px 50px">{{ user_quiz.duration|floatformat }} лет</span>
     <hr>
     {% if is_active_subscriptions %}
+        <p>
+            Обращаем Ваше внимание, что согласно Федеральному закону №323-ФЗ от 21.11.2011 «Об основах охраны здоровья
+            граждан в Российской Федерации» устанавливает диагноз и назначает лечение лечащий врач, используя полную и
+            всестороннюю информацию о пациенте. Согласно этому, представленные рекомендации не являются официальными и
+            должны быть клинически интерпретированы Вашим лечащим врачом.
+        </p>
         {% for recommendation_user_answer in recommendation_user_answers %}
             {% with recommendation_user_answer.question.recommendation as recommendation %}
                 {% if recommendation %}
