--- a/landing/static/landing/css/main.css
+++ b/landing/static/landing/css/main.css
@@ -92,9 +92,9 @@ body {
 	font-family: Arial;
 	font-weight: 600;
 	text-transform: uppercase;
-	font-size: calc(var(--index) * .71);
+	font-size: 24px;
 	letter-spacing: -.02vw;
-	padding: calc(var(--index) * .7) calc(var(--index) * 1.25);
+	padding: 15px 30px;
 	background-color: transparent;
 	color: #fff;
 	border-radius: 10em;
