--- a/app/templates/app/payment/list.html
+++ b/app/templates/app/payment/list.html
@@ -29,6 +29,8 @@
         <tr>
             <td>№</td>
             <td>Пользователь</td>
+            <td>Тариф</td>
+            <td>Реферралов</td>
             <td>YooKassa ID</td>
             <td>Дата создания</td>
             <td>Статус оплаты</td>
@@ -41,6 +43,12 @@
                 <td>{{ forloop.counter }}</td>
                 <td>
                     {{ subscription_payment.subscription.user.profile.get_full_name }}
+                </td>
+                <td>
+                    {{ subscription_payment.subscription.get_type_display }}
+                </td>
+                <td>
+                    {{ subscription_payment.subscription.user.referral.referred_users.count }}
                 </td>
                 <td>
                     {{ subscription_payment.yookassa_id }}
