--- a/app/templates/app/quiz/quiz.html
+++ b/app/templates/app/quiz/quiz.html
@@ -92,7 +92,7 @@
                     <select name="{{ question.id }}" id="" class="form-control select"
                             {% if question.is_multiple %}multiple{% endif %}>
                         {% if not question.is_required %}
-                            <option value="">-</option>
+                            <option value="">Нет</option>
                         {% endif %}
                         {% for answer in question.answers.all %}
                             <option value="{{ answer.id }}">{{ answer.text }}</option>
