--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -88,7 +88,10 @@
                     </div>
                 {% endfor %}
             </div>
-
         </div>
     {% endif %}
+    <hr>
+    <div class="text-center">
+        Проблемы с оплатой? <a href="{% url 'landing:home' %}#contact">Напишите нам</a>
+    </div>
 {% endblock %}
