--- a/app/templates/app/user_quiz/list.html
+++ b/app/templates/app/user_quiz/list.html
@@ -28,56 +28,7 @@
             <i class="feather icon-edit"></i>
             Пройти тест
         </a>
-        <table class="table table-responsive-md table-hover text-center">
-            <thead>
-            <tr>
-                <th>№</th>
-                <th>Тест</th>
-                <th>Дата прохождения</th>
-                <th>Вопросы</th>
-                <th>Продолжительность</th>
-                <th>Точность</th>
-                <th>Итог</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for user_quiz in user_quizzes %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ user_quiz.quiz.name }}</td>
-                    <td>{{ user_quiz.created_at|date:'d.m.Y H:i' }}</td>
-                    <td>{{ user_quiz.user_answers.count }} / {{ user_quiz.quiz.questions.count }}</td>
-                    {#                    {% with user_quiz.get_life_expectancy_and_accuracy as life_expectancy_and_accuracy %}#}
-                    {#                        <td>{{ life_expectancy_and_accuracy.duration }}</td>#}
-                    {#                        <td>{{ life_expectancy_and_accuracy.accuracy }}</td>#}
-                    {#                    {% endwith %}#}
-                    <td>{{ user_quiz.duration }}</td>
-                    <td>{{ user_quiz.accuracy }}%</td>
-                    <td>
-                        <a href="{% url 'app:user_quiz_recommendation' user_quiz.id %}" class="m-2">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                 class="icon icon-tabler icon-tabler-report-analytics" width="16" height="16"
-                                 viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none"
-                                 stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2"/>
-                                <path d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"/>
-                                <path d="M9 17v-5"/>
-                                <path d="M12 17v-1"/>
-                                <path d="M15 17v-3"/>
-                            </svg>
-                        </a>
-                        <a href="{% url 'app:quiz_detail' user_quiz.id %}" class="m-2">
-                            <i class="fa fa-eye text-success"></i>
-                        </a>
-                        <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" target="_blank" class="m-2">
-                            <i class="fa fa-download text-warning"></i>
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        {% include 'app/include/user_quiz/table.html' with user_quizzes=user_quizzes %}
     {% else %}
         <div class="text-black-50 text-center mt-4 w-100 m-auto d-block">
             <span class="d-block">У вас нет пройденных тестов</span>
