--- a/landing/templates/landing/auth/auth.html
+++ b/landing/templates/landing/auth/auth.html
@@ -10,6 +10,7 @@
     <script src="{% static 'landing/libs/rain.js' %}" defer=""></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="{% static 'app/images/logo.jpg' %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Raleway&display=swap" rel="stylesheet">
     <style>
         #menu__toggle {
