add tariff plans to home page

--- a/app/templates/app/include/user_quiz/table.html
+++ b/app/templates/app/include/user_quiz/table.html
@@ -1,4 +1,4 @@
-<table class="table table-responsive-md table-hover text-center">
+<table class="div2 table table-responsive-md table-hover text-center">
     <thead>
     <tr>
         <th>№</th>
