--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -182,8 +182,8 @@
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="javascript:"><span></span></a>
         <a href="{% url 'landing:home' %}" class="b-brand">
-            <div class="b-bg">
-                <i class="feather icon-heart"></i>
+            <div class="bg-white rounded">
+                <img src="{% static 'app/images/logo.png' %}" alt="" width="40" height="40">
             </div>
             <span class="b-title">Долголетие</span>
         </a>
