add tariff plans to home page

--- a/app/templates/app/flat/statistic.html
+++ b/app/templates/app/flat/statistic.html
@@ -87,7 +87,7 @@
                         Основные недостатки
                     </div>
                     <div class="card-body">
-                        <canvas id="chart3"></canvas>
+                        <canvas id="chart3" width="100%"></canvas>
                     </div>
                 </div>
             </div>
