add tariff plans to home page

--- a/app/templates/app/flat/statistic.html
+++ b/app/templates/app/flat/statistic.html
@@ -86,8 +86,8 @@
                     <div class="card-header text-center">
                         Основные недостатки
                     </div>
-                    <div class="card-body">
-                        <canvas id="chart3" width="100%"></canvas>
+                    <div class="card-body" style="width: 450px;">
+                        <canvas id="chart3"></canvas>
                     </div>
                 </div>
             </div>
