add tariff plans to home page

--- a/app/templates/app/flat/statistic.html
+++ b/app/templates/app/flat/statistic.html
@@ -62,7 +62,7 @@
             <div class="col-lg-4 col-12">
                 <div class="card shadow-1 h-100 m-1">
                     <div class="card-header"></div>
-                    <div class="card-body" style="width: 450px">
+                    <div class="card-body" style="min-width: 450px">
                         <canvas id="chart1"></canvas>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
             <div class="col-lg-4 col-12">
                 <div class="card shadow-1 h-100 m-1">
                     <div class="card-header"></div>
-                    <div class="card-body" style="width: 450px">
+                    <div class="card-body" style="min-width: 450px">
                         <canvas id="chart2"></canvas>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                     <div class="card-header text-center">
                         Основные недостатки
                     </div>
-                    <div class="card-body" style="width: 450px;">
+                    <div class="card-body" style="min-width: 450px;">
                         <canvas id="chart3"></canvas>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="card-header text-center">
                         Рекомендация
                     </div>
-                    <div class="card-body" style="width: 450px">
+                    <div class="card-body" style="min-width: 450px">
                         <p>
                             Предпологаемая продолжительность жизни: <b>{{ last_duration }} лет</b><br>
                             Предпологаемая продолжительность жизни (при исправлении): <b>{{ improved_duration }} лет</b><br>
