add tariff plans to home page

--- a/app/templates/app/flat/statistic.html
+++ b/app/templates/app/flat/statistic.html
@@ -20,6 +20,11 @@
             <a href="#">Статистика</a>
         </li>
     </ul>
+    <style>
+        body {
+            overflow: hidden;
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 {% endblock %}
 
