--- a/app/templates/app/flat/statistic.html
+++ b/app/templates/app/flat/statistic.html
@@ -22,7 +22,7 @@
     </ul>
     <style>
         body {
-            overflow: hidden;
+            overflow-x: hidden;
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
