add tariff plans to home page

--- a/landing/templates/landing/flat/home.html
+++ b/landing/templates/landing/flat/home.html
@@ -396,8 +396,7 @@
                 background-color: #fef4d9;
                 border-radius: 15px;
                 min-width: 100% !important;
-                {#width: 100% !important;#}
-                border: 1px solid lightgrey;
+            {#width: 100% !important;#} border: 1px solid lightgrey;
             }
 
             .subscription-card {
@@ -496,7 +495,7 @@
                     <span>Интеллектуальный</span> <span>проектировщик</span> <span>долголетия</span>
                 </h1>
                 <a href="{% url 'app:start_quiz' %}"
-                   class="button-start poiret-one-regular font-weight-bold">Начать</a>
+                   class="button-start poiret-one-regular font-weight-bold" style="margin-top: 20px">Начать</a>
             </div>
         </div>
         <div class="layers__item layer-4">
