--- a/landing/templates/landing/flat/home.html
+++ b/landing/templates/landing/flat/home.html
@@ -640,7 +640,7 @@
             <span class="colus-regular"
                   style="display:block; text-align: center; color: black; margin-top: 15px">либо</span>
             <div style="display: flex; justify-content: center" class="social">
-                <a href="https://t.me/TomSandr">
+                <a href="https://t.me/chesnokov_ev">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
                          viewBox="0 0 48 48">
                         <path fill="#29b6f6" d="M24 4A20 20 0 1 0 24 44A20 20 0 1 0 24 4Z" class="telegram_bg"></path>
