add tariff plans to home page

--- a/landing/templates/landing/flat/home.html
+++ b/landing/templates/landing/flat/home.html
@@ -494,8 +494,9 @@
                 <h1 class="colus-regular title mb-4 d-flex justify-content-between">
                     <span>Интеллектуальный</span> <span>проектировщик</span> <span>долголетия</span>
                 </h1>
+                <br>
                 <a href="{% url 'app:start_quiz' %}"
-                   class="button-start poiret-one-regular font-weight-bold" style="margin-top: 20px">Начать</a>
+                   class="button-start poiret-one-regular font-weight-bold">Начать</a>
             </div>
         </div>
         <div class="layers__item layer-4">
