--- a/app/templates/app/include/user_quiz/table.html
+++ b/app/templates/app/include/user_quiz/table.html
@@ -23,7 +23,7 @@
                 <a href="{% url 'app:user_quiz_recommendation' user_quiz.id %}" class="m-2">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          class="icon icon-tabler icon-tabler-report-analytics" width="16" height="16"
-                         viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none"
+                         viewBox="0 0 24 24" stroke-width="1.5" stroke="blue" fill="none"
                          stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2"/>
