add tariff plans to home page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,21 @@
             font-family: 'GTEEstiPro', sans-serif;
         }
     </style>
+    <style>
+
+        @media screen and (max-width: 720px) {
+            .recommendation-name {
+                flex-direction: column;
+            }
+            .recommendation-buttons{
+                margin-top: 20px;
+                flex-direction: column;
+            }
+            .recommendation-buttons .btn{
+                width: 90%;
+            }
+        }
+    </style>
 </head>
 
 <body>
