--- a/app/templates/app/user_quiz/recommendation/detail.html
+++ b/app/templates/app/user_quiz/recommendation/detail.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block name %}
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between align-items-center recommendation-name">
         <div>
             Рекомендация
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between align-items-center recommendation-buttons">
             <a href="{% url 'app:user_quiz_recommendation_send' user_quiz.id %}" class="btn btn-info mr-2">
                 <i class="fa fa-envelope"></i>
                 Отправить на почту
