--- a/app/templates/app/user_quiz/recommendation/detail.html
+++ b/app/templates/app/user_quiz/recommendation/detail.html
@@ -9,16 +9,18 @@
         <div>
             Рекомендация
         </div>
-        <div class="d-flex justify-content-between align-items-center recommendation-buttons">
-            <a href="{% url 'app:user_quiz_recommendation_send' user_quiz.id %}" class="btn btn-info mr-2">
-                <i class="fa fa-envelope"></i>
-                Отправить на почту
-            </a>
-            <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" class="btn btn-success">
-                <i class="fa fa-download"></i>
-                Скачать PDF
-            </a>
-        </div>
+        {% if is_active_subscriptions %}
+            <div class="d-flex justify-content-between align-items-center recommendation-buttons">
+                <a href="{% url 'app:user_quiz_recommendation_send' user_quiz.id %}" class="btn btn-info mr-2">
+                    <i class="fa fa-envelope"></i>
+                    Отправить на почту
+                </a>
+                <a href="{% url 'app:user_quiz_recommendation_pdf' user_quiz.id %}" class="btn btn-success">
+                    <i class="fa fa-download"></i>
+                    Скачать PDF
+                </a>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
 
