--- a/app/templates/app/user_quiz/list.html
+++ b/app/templates/app/user_quiz/list.html
@@ -23,8 +23,7 @@
 
 {% block content %}
     {% if user_quizzes.exists %}
-        <a href="{% url 'app:start_quiz' %}" class="btn btn-sm btn-success mb-4 position-absolute"
-           style="right: 10px; margin-top: -82px">
+        <a href="{% url 'app:start_quiz' %}" class="btn btn-sm btn-success w-100 d-block m-auto mb-4" style="max-width: 200px; margin: 10px auto !important; margin-top: -20px !important;">
             <i class="feather icon-edit"></i>
             Пройти тест
         </a>
