add tariff plans to home page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
                     {% endif %}
                 </div>
                 <div class="alert-message" style="width: 100%;padding: 5px 10px;">
-                    {{ message|striptags|safe }}
+                    {{ message|safe }}
                 </div>
             </div>
         {% endfor %}
