add tariff plans to home page

--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -28,7 +28,7 @@
         </div>
         <hr>
         <div class="row justify-content-center mt-5">
-            <div class="col-4">
+            <div class="col-12 col-sm-4">
                 <div class="card">
                     <div class="card-header text-center">
                         <h4 class="text-warning">Ежемесячная</h4>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-4">
                 <div class="card">
                     <div class="card-header text-center">
                         <h4 class="text-warning">Ежегодная</h4>
